# rust-ctor

./: .cirrus.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  test.sh  test2.sh
ctor/: Cargo.toml  README.md
ctor-proc-macro/: Cargo.toml
ctor-proc-macro/src/: lib.rs
ctor/docs/: GENERATED.md  PREAMBLE.md
ctor/examples/: basic.rs  ctor-basic.rs  ctor-example.rs  msrv.rs
ctor/src/: example.rs  gen.rs  lib.rs  macros  msrv.rs  parse.rs  priority.rs  priority_aix.rs  statics.rs
ctor/tests/: macrotest.rs
ctor/tests/errors/: ctor_anon.rs  ctor_anon.stderr  ctor_bad_crate_path.rs  ctor_bad_crate_path.stderr  ctor_bad_shape.rs  ctor_bad_shape.stderr  ctor_bad_static.rs  ctor_bad_static.stderr
ctor/tests/expand/: ctor_mutli_attr.expanded.rs  ctor_struct.expanded.rs  ctor_struct.rs
ctor/tests/expand-darwin/: ctor.expanded.rs  ctor.rs  ctor_anon.expanded.rs  ctor_anon.rs  ctor_attribute.expanded.rs  ctor_doc.expanded.rs  ctor_naked.expanded.rs  ctor_naked.rs  ctor_priority.expanded.rs  ctor_static.expanded.rs  ctor_static.rs  ctor_unsafe.expanded.rs  ctor_unsafe.rs  ctor_used_linker_attr.expanded.rs  ctor_warn.expanded.rs  dtor.expanded.rs
ctor/tests/expand-linux/: ctor.expanded.rs  ctor.rs  ctor_anon.expanded.rs  ctor_anon.rs  ctor_attribute.expanded.rs  ctor_attribute.rs  ctor_doc.expanded.rs  ctor_doc.rs  ctor_mutli_attr.expanded.rs  ctor_mutli_attr.rs  ctor_priority.expanded.rs  ctor_priority.rs  ctor_priority_late.expanded.rs  ctor_priority_late.rs  ctor_static.expanded.rs  ctor_static.rs  ctor_unsafe.expanded.rs  ctor_used_linker_attr.expanded.rs  ctor_used_linker_attr.rs  ctor_warn.expanded.rs  ctor_warn.rs  dtor.expanded.rs  dtor.rs
ctor/tests/pass/: ctor.rs  dtor.rs
ctor/tests/target-test/: ctor.rs  ctor_priority.rs
ctor/tests/target-test/ctor/: powerpc64-ibm-aix.rs
ctor/tests/target-test/ctor_default/: powerpc64-ibm-aix.rs
dtor/: Cargo.toml  README.md
dtor-proc-macro/: Cargo.toml  README.md
dtor-proc-macro/src/: lib.rs
dtor/docs/: GENERATED.md  PREAMBLE.md
dtor/src/: example.rs  features  lib.rs  native.rs  parse.rs
dtor/tests/: macrotest.rs
dtor/tests/errors/: dtor-bad-function.stderr  dtor-bad-nesting.rs  dtor-bad-nesting.stderr  dtor-bad.stderr  dtor-duplicate.stderr  dtor-unknown.stderr  dtor_bad.rs  dtor_bad.stderr  dtor_bad_crate_path.rs  dtor_bad_crate_path.stderr  dtor_bad_function.rs  dtor_bad_function.stderr  dtor_bad_nesting.stderr  dtor_duplicate.rs  dtor_duplicate.stderr  dtor_unknown.rs  dtor_unknown.stderr
dtor/tests/expand/: dtor_complex_path.expanded.rs  dtor_complex_path.rs  dtor_declarative.expanded.rs  dtor_declarative.rs  dtor_link_section.expanded.rs  dtor_link_section.rs  dtor_used_linker.expanded.rs  dtor_used_linker.rs  dtor_warn.expanded.rs  dtor_warn.rs
dtor/tests/expand-darwin/: dtor.expanded.rs  dtor_anon.expanded.rs  dtor_doc.expanded.rs  dtor_unsafe.expanded.rs  dtor_unsafe.rs
dtor/tests/expand-linux/: dtor.expanded.rs  dtor.rs  dtor_anon.expanded.rs  dtor_anon.rs  dtor_doc.expanded.rs  dtor_doc.rs
dtor/tests/expand-windows/: dtor.expanded.rs
dtor/tests/pass/: dtor.rs
dtor/tests/target-test/: dtor.rs  dtor_module_exit.rs
dtor/tests/target-test/dtor/: powerpc64-ibm-aix.rs
link-section/: Cargo.toml  README.md  build.rs
link-section-proc-macro/: Cargo.toml  README.md
link-section-proc-macro/src/: lib.rs  xx3.rs
link-section/docs/: BUILD.md  GENERATED.md  LIFE_BEFORE_MAIN.md  PREAMBLE.md
link-section/src/: example.rs  lib.rs
macro-magic/: Cargo.toml  generate_docs.rs
macro-magic/src/: lib.rs  test.rs
macro-magic/src/macros/: features.rs  mod.rs  perform.rs
macro-magic/tests/: test_chain.rs  test_expr.rs  test_foreach.rs  test_item.rs  test_macro.rs  test_parallel_split.rs  test_zip.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/macros/: mod.rs
shared/tests/: macrotest.rs
shared/tests/errors/: ctor_anon.rs  ctor_anon.stderr  ctor_bad_static.rs  ctor_bad_static.stderr
shared/tests/expand/: ctor.rs  ctor_unsafe.rs  ctor_used_linker.expanded.rs  ctor_warn.rs
shared/tests/expand-aix/: ctor.expanded.rs  dtor.expanded.rs
shared/tests/expand-darwin/: ctor.expanded.rs  ctor_anon.expanded.rs  ctor_anon.rs  ctor_attribute.expanded.rs  ctor_doc.expanded.rs  ctor_doc.rs  ctor_mutli_attr.expanded.rs  ctor_mutli_attr.rs  ctor_priority.expanded.rs  ctor_static.expanded.rs  ctor_unsafe.expanded.rs  ctor_unsafe.rs  ctor_used_linker.rs  ctor_used_linker_attr.expanded.rs  ctor_warn.expanded.rs  ctor_warn.rs  dtor.expanded.rs  dtor_anon.expanded.rs  dtor_anon.rs  dtor_doc.expanded.rs  dtor_via_ctor.expanded.rs  dtor_via_ctor.rs
shared/tests/expand-linux/: ctor.expanded.rs  ctor_anon.expanded.rs  ctor_attribute.expanded.rs  ctor_doc.expanded.rs  ctor_mutli_attr.expanded.rs  ctor_priority.expanded.rs  ctor_static.expanded.rs  ctor_unsafe.expanded.rs  ctor_used_linker_attr.expanded.rs  ctor_warn.expanded.rs  dtor.expanded.rs  dtor.rs  dtor_anon.expanded.rs  dtor_doc.expanded.rs
shared/tests/pass/: ctor.rs  dtor.rs
tests/: Cargo.toml  test.rs
tests/ctor/: mod.rs
tests/ctor/crt-static/: Cargo.toml
tests/ctor/doctest/: Cargo.toml
tests/ctor/edition-2018/: Cargo.toml
tests/ctor/edition-2021/: Cargo.toml
tests/ctor/edition-2024/: Cargo.toml
tests/ctor/no-default-features/: Cargo.toml
tests/ctor/no-std/: Cargo.toml
tests/ctor/priority/: Cargo.toml
tests/ctor/system/: Cargo.toml
tests/ctor/warn-unsafe/: Cargo.toml
tests/ctor/wasm/: Cargo.toml
tests/dtor/: mod.rs
tests/dtor/link-section/: Cargo.toml
tests/dtor/no-default-features/: Cargo.toml
tests/edition-2018/: Cargo.toml
tests/edition-2021/: Cargo.toml
tests/edition-2024/: Cargo.toml
tests/edition-2024/src/: main.rs
tests/link_section/: mod.rs
tests/link_section/basic/: Cargo.toml
tests/link_section/no-default-features/: Cargo.toml
tests/link_section/wasm/: Cargo.toml
tests/no-std/src/: lib.rs
tests/src/: dylib.rs  dylib_load.rs  lib.rs
tests/system/src/: dylib.rs  dylib_load.rs  lib.rs
tests/wasm/: Cargo.toml
tests/wasm/src/: lib.rs
(+58 files in other folders)
