[workspace]
resolver = "2"
members = [ 
    "ctor", 
    "dtor", 
    "ctor-proc-macro",
    "dtor-proc-macro",
    "link-section",
    "link-section-proc-macro",
    "shared",
    "tests"
]
default-members = [
    "ctor",
    "dtor",
    "ctor-proc-macro",
    "dtor-proc-macro",
    "shared",
    "tests"
]
exclude = []

[workspace.package]
authors = ["Matt Mastracci <matthew@mastracci.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mmastrac/rust-ctor"

[workspace.dependencies]
ctor = { path = "ctor", default-features = false }
dtor = { path = "dtor", default-features = false }
link-section = { path = "link-section", version = "=0.0.8", default-features = false }

# Bump all these together
dtor-proc-macro = { path = "dtor-proc-macro", version = "=0.0.10" }
ctor-proc-macro = { path = "ctor-proc-macro", version = "=0.0.10" }
link-section-proc-macro = { path = "link-section-proc-macro", version = "=0.0.10" }
