[workspace]
resolver = "2"
members = [ 
    "ctor", 
    "dtor", 
    "ctor-proc-macro",
    "dtor-proc-macro",
    "macro-magic",
    "link-section",
    "link-section-proc-macro",
    "tests"
]
default-members = [
    "ctor",
    "dtor",
    "link-section",
    "tests"
]
exclude = []

[workspace.package]
authors = ["Matt Mastracci <matthew@mastracci.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mmastrac/rust-ctor"

[workspace.dependencies]
ctor = { path = "ctor", default-features = false }
dtor = { path = "dtor", version = "0.8.1", default-features = false }
link-section = { path = "link-section", version = "0.2.1", default-features = false }

# Bump all these together
dtor-proc-macro = { path = "dtor-proc-macro", version = "=0.0.13" }
ctor-proc-macro = { path = "ctor-proc-macro", version = "=0.0.13" }
link-section-proc-macro = { path = "link-section-proc-macro", version = "=0.0.13" }
