[package]
name = "ctor"
version = "0.8.0"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2021"
description = "__attribute__((constructor)) for Rust"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mmastrac/rust-ctor"
readme = "../README.md"
categories = ["no-std"]
rust-version = "1.60"

[features]
default = ["std", "dtor", "proc_macro", "no_warn_on_missing_unsafe"]

std = ["dtor?/std"]

# Enable the dtor re-export
dtor = ["dep:dtor"]

# Enable the proc_macro
proc_macro = ["dep:ctor-proc-macro", "dtor?/proc_macro"]

# For nightly users, used(linker) may be a better choice
used_linker = ["dtor?/used_linker"]

# As we are warning on missing unsafe, allow users to temporarily opt out
no_warn_on_missing_unsafe = ["dtor?/no_warn_on_missing_unsafe"]

[dependencies]
ctor-proc-macro = { version = "=0.0.7", optional = true }
dtor = { version = "0.3.0", default-features = false, optional = true }

[dev-dependencies]
libc-print = "0.1.20"

[[example]]
name = "example"
path = "src/example.rs"
