[package]
name = "ctor"
version = "0.10.1"
authors.workspace = true
edition = "2021"
description = "__attribute__((constructor)) for Rust"
license.workspace = true
repository.workspace = true
readme = "../README.md"
categories = ["no-std"]
rust-version = "1.60"

[features]
default = ["std", "dtor", "proc_macro", "no_warn_on_missing_unsafe", "priority"]

std = ["dtor?/std"]

# Enable support for the priority parameter
priority = ["dep:link-section"]

# Enable the dtor re-export
dtor = ["dep:dtor"]

# Enable the proc_macro
proc_macro = ["dep:ctor-proc-macro", "dtor?/proc_macro"]

# For nightly users, used(linker) may be a better choice
used_linker = ["dtor?/used_linker"]

# As we are warning on missing unsafe, allow users to temporarily opt out
no_warn_on_missing_unsafe = ["dtor?/no_warn_on_missing_unsafe"]

[dependencies]
ctor-proc-macro = { workspace = true, optional = true }
dtor = { workspace = true, default-features = false, optional = true }
link-section = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
libc-print = "0.1"
macrotest = "1"
trybuild = "1"

[[example]]
name = "ctor-example"
path = "src/example.rs"

[[example]]
name = "msrv"
path = "src/msrv.rs"
