[package]
name = "ctor"
version = "0.11.1"
authors.workspace = true
edition = "2021"
description = "__attribute__((constructor)) for Rust"
license.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["no-std"]
rust-version = "1.60"

[features]
default = ["std", "proc_macro", "no_warn_on_missing_unsafe", "priority"]

std = []

# Enable support for the priority parameter
priority = ["dep:link-section"]

# Enable the proc_macro
proc_macro = ["dep:ctor-proc-macro"]

# For nightly users, used(linker) may be a better choice
used_linker = []

# As we are warning on missing unsafe, allow users to temporarily opt out
no_warn_on_missing_unsafe = []

[dependencies]
ctor-proc-macro = { workspace = true, optional = true }
link-section = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
libc-print = "0.1"
macrotest = "1"
trybuild = "1"
walkdir = "2"
tempfile = "3"
