[package]
name = "dtor"
version = "0.11.0"
authors.workspace = true
edition = "2021"
description = "__attribute__((destructor)) for Rust"
license.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["no-std"]
rust-version = "1.60"

[features]
default = ["std", "proc_macro"]
std = []
proc_macro = ["dep:dtor-proc-macro"]
used_linker = []
no_warn_on_missing_unsafe = []

[dependencies]
dtor-proc-macro = { workspace = true, optional = true }

[dev-dependencies]
libc-print = "0.1"
macrotest = "1"
trybuild = "1"
walkdir = "2"
tempfile = "3"

[[example]]
name = "dtor-example"
path = "src/example.rs"

[lib]
name = "dtor"
