[package]
name = "shared"
version = "0.1.0"
edition = "2018"
publish = false

[features]
default = ["std", "priority"]
std = []
used_linker = []
proc_macro = []
no_warn_on_missing_unsafe = []
priority = []

[dependencies]
link-section = { path = "../link-section", version = "=0.0.6", default-features = false }

[dev-dependencies]
macrotest = "1"
trybuild = "1"

# Prevents warning about unused patch version
ctor = "*"
