[package]
name = "shared"
version = "0.1.0"
edition = "2018"
publish = false

[features]
default = ["std", "priority"]
std = []
used_linker = []
proc_macro = []
no_warn_on_missing_unsafe = []
priority = []

[dependencies]
link-section = { workspace = true, default-features = false }
ctor = { workspace = true, features = ["std", "proc_macro", "dtor"] }
dtor = { workspace = true, features = ["std", "proc_macro"] }

[dev-dependencies]
macrotest = "1"
trybuild = "1"
