[package]
name = "tests"
version = "0.1.0"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2018"
publish = false

[dependencies]
ctor = { path = "../ctor" }
dlopen = "0.1.8"
libc-print = "0.1.15"
libc = { version = "0.2.95", default-features = false }

[[example]]
name = "dylib"
path = "src/dylib.rs"
crate-type = ["cdylib"]

[[example]]
name = "dylib_load"
path = "src/dylib_load.rs"