[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
# For nightly users, used(linker) may be a better choice
used_linker = ["ctor/used_linker"]

[dependencies]
ctor = { path = "../ctor" }
dlopen = "0.1.8"
libc-print = "0.1.15"
libc = { version = "0.2.96", default-features = false }
rustversion = "1"

[[example]]
name = "dylib"
path = "src/dylib.rs"
crate-type = ["cdylib"]

[[example]]
name = "dylib_load"
path = "src/dylib_load.rs"